--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
+    "@supabase/supabase-js": "^1.33.2",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "next": "12.1.0",
+    "pure-react-carousel": "^1.28.1",
     "react": "17.0.2",
+    "react-bootstrap": "^2.2.0",
     "react-dom": "17.0.2",
-    "react-responsive": "^9.0.0-beta.6"
+    "react-responsive": "^9.0.0-beta.6",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
