--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "next": "12.1.0",
+    "node-google-translate-skidz": "^1.1.2",
     "pure-react-carousel": "^1.28.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.0",
