--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "pure-react-carousel": "^1.28.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.0",
+    "react-country-dropdown": "^1.0.4",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.29.0",
+    "react-phone-input-2": "^2.15.0",
     "react-responsive": "^9.0.0-beta.6",
+    "react-select-country-list": "^2.2.3",
     "swr": "^1.2.2"
   },
   "devDependencies": {
