--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^1.33.2",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
+    "i18next": "^21.6.16",
     "next": "12.1.0",
     "node-google-translate-skidz": "^1.1.2",
     "pure-react-carousel": "^1.28.1",
@@ -25,6 +26,7 @@
     "react-country-dropdown": "^1.0.4",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
+    "react-i18next": "^11.16.6",
     "react-phone-input-2": "^2.15.0",
     "react-responsive": "^9.0.0-beta.6",
     "react-select-country-list": "^2.2.3",
