--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "react/jsx-key": "off",
-    "react-hooks/rules-of-hooks": "off"
+    "react-hooks/rules-of-hooks": "off",
+    "react/no-unescaped-entities": "off"
   }
 }
