--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bugsnag/js": "^7.16.2",
+    "@bugsnag/plugin-react": "^7.16.2",
     "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
